--- a/WebContent/templates/default/default.xhtml
+++ b/WebContent/templates/default/default.xhtml
@@ -19,6 +19,8 @@
 		src="#{facesContext.externalContext.requestContextPath}/framework/js/jquery.1.8.3.js"></script>
 	<script type="text/javascript"
 		src="#{facesContext.externalContext.requestContextPath}/framework/js/bootstrap.min.js"></script>
+	<script type="text/javascript"
+		src="#{facesContext.externalContext.requestContextPath}/framework/js/custom.js"></script>
 
 </h:head>
 
