--- a/WebContent/templates/default/header.xhtml
+++ b/WebContent/templates/default/header.xhtml
@@ -19,16 +19,17 @@
 					<a data-target=".nav-collapse" data-toggle="collapse"
 						class="btn btn-navbar"> <span class="icon-bar"></span> <span
 						class="icon-bar"></span> <span class="icon-bar"></span>
-					</a> <a href="#" class="brand">Project name</a>
+					</a>
+					<a href="#" class="brand">Project name</a>
 					<!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
 					<div class="nav-collapse collapse">
 						<p class="navbar-text pull-right" style="margin-top: 5px;">
             		  		Logged in as <h:link styleClass="navbar-link" outcome="login" value="User"></h:link>
        			     	</p>
 						<ul class="nav">
-							<li class="active"><h:link outcome="home" value="Home"></h:link></li>
-							<li><h:link outcome="sobre" value="Sobre"></h:link></li>
-							<li><h:link outcome="contato" value="Contato"></h:link></li>
+							<li><h:link id="home-menu" outcome="home" value="Home"></h:link></li>
+							<li><h:link id="sobre-menu" outcome="sobre" value="Sobre"></h:link></li>
+							<li><h:link id="contato-menu" outcome="contato" value="Contato"></h:link></li>
 							<!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
 							<!-- 								<li class="dropdown"><a data-toggle="dropdown" -->
 							<!-- 									class="dropdown-toggle" href="#">Dropdown <b class="caret"></b></a> -->
