--- a/WebContent/templates/default/default.xhtml
+++ b/WebContent/templates/default/default.xhtml
@@ -7,7 +7,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
-	<title><ui:insert name="title">Site</ui:insert></title>
+	<title><ui:insert name="title">#{application_props.tituloSite}</ui:insert></title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta>
 	<link rel="stylesheet"
 		href="#{facesContext.externalContext.requestContextPath}/framework/css/bootstrap.min.css"></link>
@@ -25,6 +25,7 @@
 </h:head>
 
 <h:body>
+	<f:loadBundle basename="resources.application" var="application_props" />
 	<div id="wrap">
 		<div id="header">
 			<ui:insert name="header">
