--- a/WebContent/framework/css/custom.css
+++ b/WebContent/framework/css/custom.css
@@ -6,7 +6,7 @@ html,body {
 }
 /* Wrapper for page content to push down footer */
 #wrap {
-/* 	min-height: 100%; */
+	min-height: 70%;
 	height: auto !important;
 	height: 100%;
 	/* Negative indent footer by it's height */
