Ajustes gerais para a área administrativa (protected).

--- a/WebContent/templates/protected/default.xhtml
+++ b/WebContent/templates/protected/default.xhtml
@@ -20,7 +20,7 @@
 	<script type="text/javascript"
 		src="#{facesContext.externalContext.requestContextPath}/framework/js/bootstrap.min.js"></script>
 	<script type="text/javascript"
-		src="#{facesContext.externalContext.requestContextPath}/framework/js/custom.js"></script>
+		src="#{facesContext.externalContext.requestContextPath}/framework/js/custom-pro.js"></script>
 
 </h:head>
 
