--- a/WebContent/templates/protected/header.xhtml
+++ b/WebContent/templates/protected/header.xhtml
@@ -28,22 +28,8 @@
 					<!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
 					<div class="nav-collapse collapse">
 						<ul class="nav">
-							<li><h:link id="home-menu" outcome="home" value="Home"></h:link></li>
-							<li><h:link id="sobre-menu" outcome="sobre" value="Sobre"></h:link></li>
-							<li><h:link id="contato-menu" outcome="contato" value="Contato"></h:link></li>
-							<!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
-							<!-- 								<li class="dropdown"><a data-toggle="dropdown" -->
-							<!-- 									class="dropdown-toggle" href="#">Dropdown <b class="caret"></b></a> -->
-							<!-- 									<ul class="dropdown-menu"> -->
-							<!-- 										<li><a href="#">Action</a></li> -->
-							<!-- 										<li><a href="#">Another action</a></li> -->
-							<!-- 										<li><a href="#">Something else here</a></li> -->
-							<!-- 										<li class="divider"></li> -->
-							<!-- 										<li class="nav-header">Nav header</li> -->
-							<!-- 										<li><a href="#">Separated link</a></li> -->
-							<!-- 										<li><a href="#">One more separated link</a></li> -->
-							<!-- 									</ul> -->
-							<!-- 								</li> -->
+							<li><h:link id="homeProtected-menu" outcome="inicialProtected" value="Home"></h:link></li>
+							<li><h:link id="usuariosProtected-menu" outcome="usuariosProtected" value="Usuários"></h:link></li>
 						</ul>
 					</div>
 					<!--/.nav-collapse -->
